Fixes the weird styling on IE11 that caused by the IE's flexbox bug.
* Bug: https://github.com/theplant/hsm-acem-survey-app/issues/59#issuecomment-200096994
* Solution: http://philipwalton.com/articles/normalizing-cross-browser-flexbox-bugs/

--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -1,3 +1,16 @@
+/**
+ * This solves weird styling on IE11 that issued here:
+ *     https://github.com/theplant/hsm-acem-survey-app/issues/59#issuecomment-200096994
+ *
+ * Note 1. Avoid the IE 10-11 `min-height` bug.
+ * Note 2. Set `flex-shrink` to `0` to prevent Chrome, Opera, and Safari from
+ *    letting these items shrink to smaller than their content's default
+ *    minimum size.
+ *
+ * Read more about this solution here:
+ *     http://philipwalton.com/articles/normalizing-cross-browser-flexbox-bugs/
+ */
+
 /* Base Application Styles */
 
 /* rgba(0,0,0,0.83) */
@@ -14,11 +27,10 @@ html, body, p {
 }
 
 body {
-    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    min-height: 100%;
-
+    height: 100vh; /* Note 1 */
+    box-sizing: border-box;
     font-family: Roboto, sans-serif;
     color: $black;
     line-height: 24px;
@@ -40,9 +52,10 @@ header {
     box-sizing: border-box;
     background: $accent-color;
     color: white;
-    height: 68px;
     width: 100%;
+    height: 68px;
     display: flex;
+    flex-shrink: 0; /* Note 2 */
     align-items: center;
     padding: 0 24px;
     font-family: Roboto-Medium, sans-serif;
@@ -69,6 +82,7 @@ header {
 
 footer {
     min-height: 70px;
+    flex-shrink: 0; /* Note 2 */
     padding-bottom: 48px;
 
     /* Override MDL accent */
@@ -148,10 +162,14 @@ blockquote {
 }
 
 .survey-page {
-    flex: 1;
     display: flex;
+    flex: 1 0 auto; /* Note 2 */
     flex-direction: column;
     justify-content: space-between;
+
+    > section {
+        flex: 1 0 auto; /* Note 2 */
+    }
 }
 
 .instructions {
